--- a/prompt_II.ipynb
+++ b/prompt_II.ipynb
@@ -580,15 +580,107 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression:\n",
+      "  Mean Squared Error: 393360890033179.19\n",
+      "  R-squared: -0.00\n",
+      "\n",
+      "Decision Tree Regression:\n",
+      "  Mean Squared Error: 438315851838663.19\n",
+      "  R-squared: -0.12\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "# Load the data\n",
+    "df = pd.read_csv('vehicles.csv')\n",
+    "\n",
+    "# Separate features and target variable\n",
+    "X = df.drop(columns=['price'])  # Features\n",
+    "y = df['price']  # Target variable\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Define preprocessing steps\n",
+    "numeric_features = X.select_dtypes(include=['int64', 'float64']).columns\n",
+    "categorical_features = X.select_dtypes(include=['object']).columns\n",
+    "\n",
+    "numeric_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='median')),  # Handle missing values with median\n",
+    "    ('scaler', StandardScaler())  # Scale numerical features\n",
+    "])\n",
+    "\n",
+    "categorical_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='most_frequent')),  # Handle missing values with mode\n",
+    "    ('onehot', OneHotEncoder(handle_unknown='ignore'))  # One-hot encode categorical variables\n",
+    "])\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numeric_transformer, numeric_features),\n",
+    "        ('cat', categorical_transformer, categorical_features)\n",
+    "    ])\n",
+    "\n",
+    "# Define regression models\n",
+    "models = {\n",
+    "    'Linear Regression': LinearRegression(),\n",
+    "    'Decision Tree Regression': DecisionTreeRegressor(),\n",
+    "    'Random Forest Regression': RandomForestRegressor()\n",
+    "}\n",
+    "\n",
+    "# Train and evaluate models\n",
+    "for name, model in models.items():\n",
+    "    # Create a pipeline with preprocessing and the current model\n",
+    "    pipeline = Pipeline(steps=[('preprocessor', preprocessor), ('model', model)])\n",
+    "    \n",
+    "    # Train the model\n",
+    "    pipeline.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Make predictions\n",
+    "    y_pred = pipeline.predict(X_test)\n",
+    "    \n",
+    "    # Evaluate the model\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "    \n",
+    "    print(f\"{name}:\")\n",
+    "    print(f\"  Mean Squared Error: {mse:.2f}\")\n",
+    "    print(f\"  R-squared: {r2:.2f}\")\n",
+    "    print()\n",
+    "\n",
+    "# Cross-validation to assess model generalization and mitigate overfitting\n",
+    "for name, model in models.items():\n",
+    "    # Create a pipeline with preprocessing and the current model\n",
+    "    pipeline = Pipeline(steps=[('preprocessor', preprocessor), ('model', model)])\n",
+    "    \n",
+    "    # Perform cross-validation\n",
+    "    scores = cross_val_score(pipeline, X, y, cv=5, scoring='neg_mean_squared_error')\n",
+    "    \n",
+    "    # Calculate mean squared error\n",
+    "    mean_mse = -scores.mean()\n",
+    "    \n",
+    "    print(f\"{name}:\")\n",
+    "    print(f\"  Cross-validated Mean Squared Error: {mean_mse:.2f}\")\n",
+    "    print()\n"
+   ]
   },
   {
    "cell_type": "code",
