--- a/prompt_II.ipynb
+++ b/prompt_II.ipynb
@@ -43,17 +43,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('vehicles.csv')\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>region</th>\n",
+       "      <th>price</th>\n",
+       "      <th>year</th>\n",
+       "      <th>manufacturer</th>\n",
+       "      <th>model</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>fuel</th>\n",
+       "      <th>odometer</th>\n",
+       "      <th>title_status</th>\n",
+       "      <th>transmission</th>\n",
+       "      <th>VIN</th>\n",
+       "      <th>drive</th>\n",
+       "      <th>size</th>\n",
+       "      <th>type</th>\n",
+       "      <th>paint_color</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7222695916</td>\n",
+       "      <td>prescott</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>az</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7218891961</td>\n",
+       "      <td>fayetteville</td>\n",
+       "      <td>11900</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7221797935</td>\n",
+       "      <td>florida keys</td>\n",
+       "      <td>21000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>fl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7222270760</td>\n",
+       "      <td>worcester / central MA</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7210384030</td>\n",
+       "      <td>greensboro</td>\n",
+       "      <td>4900</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>nc</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id                  region  price  year manufacturer model  \\\n",
+       "0  7222695916                prescott   6000   NaN          NaN   NaN   \n",
+       "1  7218891961            fayetteville  11900   NaN          NaN   NaN   \n",
+       "2  7221797935            florida keys  21000   NaN          NaN   NaN   \n",
+       "3  7222270760  worcester / central MA   1500   NaN          NaN   NaN   \n",
+       "4  7210384030              greensboro   4900   NaN          NaN   NaN   \n",
+       "\n",
+       "  condition cylinders fuel  odometer title_status transmission  VIN drive  \\\n",
+       "0       NaN       NaN  NaN       NaN          NaN          NaN  NaN   NaN   \n",
+       "1       NaN       NaN  NaN       NaN          NaN          NaN  NaN   NaN   \n",
+       "2       NaN       NaN  NaN       NaN          NaN          NaN  NaN   NaN   \n",
+       "3       NaN       NaN  NaN       NaN          NaN          NaN  NaN   NaN   \n",
+       "4       NaN       NaN  NaN       NaN          NaN          NaN  NaN   NaN   \n",
+       "\n",
+       "  size type paint_color state  \n",
+       "0  NaN  NaN         NaN    az  \n",
+       "1  NaN  NaN         NaN    ar  \n",
+       "2  NaN  NaN         NaN    fl  \n",
+       "3  NaN  NaN         NaN    ma  \n",
+       "4  NaN  NaN         NaN    nc  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -393,15 +580,107 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression:\n",
+      "  Mean Squared Error: 393360890033179.19\n",
+      "  R-squared: -0.00\n",
+      "\n",
+      "Decision Tree Regression:\n",
+      "  Mean Squared Error: 438315851838663.19\n",
+      "  R-squared: -0.12\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "# Load the data\n",
+    "df = pd.read_csv('vehicles.csv')\n",
+    "\n",
+    "# Separate features and target variable\n",
+    "X = df.drop(columns=['price'])  # Features\n",
+    "y = df['price']  # Target variable\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Define preprocessing steps\n",
+    "numeric_features = X.select_dtypes(include=['int64', 'float64']).columns\n",
+    "categorical_features = X.select_dtypes(include=['object']).columns\n",
+    "\n",
+    "numeric_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='median')),  # Handle missing values with median\n",
+    "    ('scaler', StandardScaler())  # Scale numerical features\n",
+    "])\n",
+    "\n",
+    "categorical_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='most_frequent')),  # Handle missing values with mode\n",
+    "    ('onehot', OneHotEncoder(handle_unknown='ignore'))  # One-hot encode categorical variables\n",
+    "])\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numeric_transformer, numeric_features),\n",
+    "        ('cat', categorical_transformer, categorical_features)\n",
+    "    ])\n",
+    "\n",
+    "# Define regression models\n",
+    "models = {\n",
+    "    'Linear Regression': LinearRegression(),\n",
+    "    'Decision Tree Regression': DecisionTreeRegressor(),\n",
+    "    'Random Forest Regression': RandomForestRegressor()\n",
+    "}\n",
+    "\n",
+    "# Train and evaluate models\n",
+    "for name, model in models.items():\n",
+    "    # Create a pipeline with preprocessing and the current model\n",
+    "    pipeline = Pipeline(steps=[('preprocessor', preprocessor), ('model', model)])\n",
+    "    \n",
+    "    # Train the model\n",
+    "    pipeline.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Make predictions\n",
+    "    y_pred = pipeline.predict(X_test)\n",
+    "    \n",
+    "    # Evaluate the model\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "    \n",
+    "    print(f\"{name}:\")\n",
+    "    print(f\"  Mean Squared Error: {mse:.2f}\")\n",
+    "    print(f\"  R-squared: {r2:.2f}\")\n",
+    "    print()\n",
+    "\n",
+    "# Cross-validation to assess model generalization and mitigate overfitting\n",
+    "for name, model in models.items():\n",
+    "    # Create a pipeline with preprocessing and the current model\n",
+    "    pipeline = Pipeline(steps=[('preprocessor', preprocessor), ('model', model)])\n",
+    "    \n",
+    "    # Perform cross-validation\n",
+    "    scores = cross_val_score(pipeline, X, y, cv=5, scoring='neg_mean_squared_error')\n",
+    "    \n",
+    "    # Calculate mean squared error\n",
+    "    mean_mse = -scores.mean()\n",
+    "    \n",
+    "    print(f\"{name}:\")\n",
+    "    print(f\"  Cross-validated Mean Squared Error: {mean_mse:.2f}\")\n",
+    "    print()\n"
+   ]
   },
   {
    "cell_type": "code",
