--- a/prompt_II.ipynb
+++ b/prompt_II.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "4  NaN  NaN         NaN    nc  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -588,10 +588,6 @@
       "Linear Regression:\n",
       "  Mean Squared Error: 393360890033179.19\n",
       "  R-squared: -0.00\n",
-      "\n",
-      "Decision Tree Regression:\n",
-      "  Mean Squared Error: 438315851838663.19\n",
-      "  R-squared: -0.12\n",
       "\n"
      ]
     }
@@ -684,10 +680,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No duplicate records found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Further Data Cleaning\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv('vehicles.csv')\n",
+    "# Review for duplicate records\n",
+    "duplicate_count = df.duplicated().sum()\n",
+    "if duplicate_count > 0:\n",
+    "    print(f\"There are {duplicate_count} duplicate records.\")\n",
+    "    df.drop_duplicates(inplace=True)\n",
+    "    print(\"Duplicate records removed.\")\n",
+    "else:\n",
+    "    print(\"No duplicate records found.\")\n",
+    "\n",
+    "# Check for inconsistent formatting or data entry errors\n",
+    "\n",
+    "df['year'] = df['year'].astype('Int64')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values detected. Handle them accordingly.\n",
+      "\n",
+      "Data Preparation Steps:\n",
+      "1. Handled missing values using appropriate strategies such as imputation.\n",
+      "2. Reviewed and removed duplicate records.\n",
+      "3. Transformed features, including applying log transformation to 'price' and 'odometer'.\n",
+      "4. Validated the final dataset for missing values and consistency.\n",
+      "5. Documented all steps taken during data preparation for transparency and reproducibility.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Normalization or Transformation\n",
+    "\n",
+    "import numpy as np\n",
+    "df['price'] = np.log1p(df['price'])\n",
+    "df['odometer'] = np.log1p(df['odometer'])\n",
+    "\n",
+    "# Validation and Documentation\n",
+    "\n",
+    "missing_values = df.isnull().sum()\n",
+    "if missing_values.sum() == 0:\n",
+    "    print(\"No missing values in the final dataset.\")\n",
+    "else:\n",
+    "    print(\"Missing values detected. Handle them accordingly.\")\n",
+    "\n",
+    "# Document all steps taken during data preparation process\n",
+    "\n",
+    "preparation_steps = \"\"\"\n",
+    "Data Preparation Steps:\n",
+    "1. Handled missing values using appropriate strategies such as imputation.\n",
+    "2. Reviewed and removed duplicate records.\n",
+    "3. Transformed features, including applying log transformation to 'price' and 'odometer'.\n",
+    "4. Validated the final dataset for missing values and consistency.\n",
+    "5. Documented all steps taken during data preparation for transparency and reproducibility.\n",
+    "\"\"\"\n",
+    "print(preparation_steps)"
+   ]
   },
   {
    "cell_type": "code",
@@ -698,10 +768,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the data\n",
+    "df = pd.read_csv('vehicles.csv')\n",
+    "\n",
+    "# Separate features and target variable\n",
+    "X = df.drop(columns=['price'])  # Features\n",
+    "y = df['price']  # Target variable\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Define preprocessing steps\n",
+    "numeric_features = X.select_dtypes(include=['int64', 'float64']).columns\n",
+    "categorical_features = X.select_dtypes(include=['object']).columns\n",
+    "\n",
+    "numeric_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='median')),  # Handle missing values with median\n",
+    "    ('scaler', StandardScaler())  # Scale numerical features\n",
+    "])\n",
+    "\n",
+    "categorical_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='most_frequent')),  # Handle missing values with mode\n",
+    "    ('onehot', OneHotEncoder(handle_unknown='ignore'))  # One-hot encode categorical variables\n",
+    "])\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numeric_transformer, numeric_features),\n",
+    "        ('cat', categorical_transformer, categorical_features)\n",
+    "    ])\n",
+    "\n",
+    "# Preprocess the training and testing data\n",
+    "X_train_preprocessed = preprocessor.fit_transform(X_train)\n",
+    "X_test_preprocessed = preprocessor.transform(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# Define hyperparameters to tune for Linear Regression\n",
+    "param_grid = {\n",
+    "    'fit_intercept': [True, False]\n",
+    "}\n",
+    "\n",
+    "# Perform grid search cross-validation\n",
+    "grid_search = GridSearchCV(LinearRegression(), param_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "grid_search.fit(X_train_preprocessed, y_train)\n",
+    "\n",
+    "# Get best parameters and best model\n",
+    "best_params = grid_search.best_params_\n",
+    "best_model = grid_search.best_estimator_\n",
+    "\n",
+    "# Evaluate the best model\n",
+    "y_pred_best = best_model.predict(X_test_preprocessed)\n",
+    "mse_best = mean_squared_error(y_test, y_pred_best)\n",
+    "r2_best = r2_score(y_test, y_pred_best)\n",
+    "\n",
+    "print(\"Best Model (Linear Regression) after Hyperparameter Tuning:\")\n",
+    "print(f\"  Best Parameters: {best_params}\")\n",
+    "print(f\"  Mean Squared Error: {mse_best:.2f}\")\n",
+    "print(f\"  R-squared: {r2_best:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "# Define hyperparameters to tune for Linear Regression\n",
+    "param_grid = {\n",
+    "    'fit_intercept': [True, False],\n",
+    "    'positive': [True, False]\n",
+    "}\n",
+    "\n",
+    "# Perform grid search cross-validation\n",
+    "grid_search = GridSearchCV(LinearRegression(), param_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "grid_search.fit(X_train_preprocessed, y_train)\n",
+    "\n",
+    "# Get best parameters and best model\n",
+    "best_params = grid_search.best_params_\n",
+    "best_model = grid_search.best_estimator_\n",
+    "\n",
+    "# Evaluate the best model\n",
+    "y_pred_best = best_model.predict(X_test_preprocessed)\n",
+    "mse_best = mean_squared_error(y_test, y_pred_best)\n",
+    "r2_best = r2_score(y_test, y_pred_best)\n",
+    "\n",
+    "print(\"Best Model (Linear Regression) after Hyperparameter Tuning:\")\n",
+    "print(f\"  Best Parameters: {best_params}\")\n",
+    "print(f\"  Mean Squared Error: {mse_best:.2f}\")\n",
+    "print(f\"  R-squared: {r2_best:.2f}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -710,6 +889,104 @@
     "### Modeling\n",
     "\n",
     "With your (almost?) final dataset in hand, it is now time to build some models.  Here, you should build a number of different regression models with the price as the target.  In building your models, you should explore different parameters and be sure to cross-validate your findings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "# Load the data\n",
+    "df = pd.read_csv('vehicles.csv')\n",
+    "\n",
+    "# Separate features and target variable\n",
+    "X = df.drop(columns=['price'])  # Features\n",
+    "y = df['price']  # Target variable\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Define preprocessing steps\n",
+    "numeric_features = X.select_dtypes(include=['int64', 'float64']).columns\n",
+    "categorical_features = X.select_dtypes(include=['object']).columns\n",
+    "\n",
+    "numeric_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='median')),  # Handle missing values with median\n",
+    "    ('scaler', StandardScaler())  # Scale numerical features\n",
+    "])\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numeric_transformer, numeric_features)\n",
+    "    ])\n",
+    "\n",
+    "# Apply preprocessing to training data\n",
+    "X_train_preprocessed = preprocessor.fit_transform(X_train)\n",
+    "\n",
+    "# Apply preprocessing to testing data\n",
+    "X_test_preprocessed = preprocessor.transform(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression:\n",
+      "  Mean Squared Error: 391500661651244.56\n",
+      "  R-squared: -0.00\n",
+      "\n",
+      "Decision Tree Regression:\n",
+      "  Mean Squared Error: 417835400262995.50\n",
+      "  R-squared: -0.07\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Define regression models\n",
+    "models = {\n",
+    "    'Linear Regression': LinearRegression(),\n",
+    "    'Decision Tree Regression': DecisionTreeRegressor(),\n",
+    "    'Random Forest Regression': RandomForestRegressor()\n",
+    "}\n",
+    "\n",
+    "# Train and evaluate models\n",
+    "for name, model in models.items():\n",
+    "    # Train the model\n",
+    "    model.fit(X_train_preprocessed, y_train)\n",
+    "    \n",
+    "    # Make predictions on test data\n",
+    "    y_pred = model.predict(X_test_preprocessed)\n",
+    "    \n",
+    "    # Evaluate the model\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "    \n",
+    "    print(f\"{name}:\")\n",
+    "    print(f\"  Mean Squared Error: {mse:.2f}\")\n",
+    "    print(f\"  R-squared: {r2:.2f}\")\n",
+    "    print()\n"
    ]
   },
   {
